[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aiohere"
dist-name = "aiohere"
author = "eifinger"
author-email = "kevin.stillhammer@gmail.com"
home-page = "http://github.com/eifinger/aiohere"
classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: MIT License"
    ]
requires = [
    "aiohttp>=3.7.4"
]
requires-python=">=3.8"
description-file="README.md"

[tool.flit.metadata.requires-extra]
test = [
    "aresponses==2.1.4",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-asyncio==0.16.0",
    "pylint==2.12.2",
    "tox==3.24.0",
    "codecov==2.1.12",
    "flake8==4.0.1",
    "mypy==0.930",
    "pre-commit==2.16.0",
    "black==21.12b0"
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov"

[tool.semantic_release]
version_variable="aiohere/__init__.py:__version__"
build_command="pip install flit && flit build"
